--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Examples Commits</title>
 </head>
 <body>
-    <h1>Este es el segundo commit</h1>
-    <h2>Este es el tercer commit</h2>
+    <h1>Este es el cuarto commit</h1>
 </body>
 </html>
